added web user name identifier for logs

--- a/server/index.html
+++ b/server/index.html
@@ -11,6 +11,10 @@
 			socket.on("updateCount", function(count) {
 				$('#currentUsers').text(count);
 			});
+
+			socket.on("connected", function() {
+				socket.emit("welcome", "Web User");
+			});
 		</script>
 	</head>
 
